# sports-modelling

./: hello.py  pyproject.toml
notebooks/ncaab/: 1-data-exploration.ipynb
sports_modelling/data_management/: DataManager.py  NCAABManager.py
sports_modelling/power_rankings/: PowerRankingsManager.py
