[project]
name = "sports-modelling"
version = "0.1.0"
description = "Sports data and model management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cbbpy>=2.0.2",
    "fastparquet>=2024.5.0",
    "pandas>=2.2.3",
    "pyarrow>=17.0.0",
    "scikit-learn>=1.5.2",
    "xgboost>=2.1.2",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
]
